--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,14 @@ cache:
   key: ${CI_PROJECT_NAME}
 
 before_script:
-  - export PGP_PATH=`pwd`/.pgp
-  - mkdir $PGP_PATH
-  - echo ${PGP_PUBRING} > $PGP_PATH/pubring.asc
-  - echo ${PGP_SECRING} > $PGP_PATH/secring.asc
+  - gpg --version
+  - ps aux | grep gpg
+  - export GPG_PATH=`pwd`/.gpg
+  - mkdir $GPG_PATH
+  - echo ${PGP_PUBRING} > $GPG_PATH/pubring.asc
+  - echo ${PGP_SECRING} > $GPG_PATH/secring.asc
+  - gpg --import $GPG_PATH/secring.asc
+  - gpg --list-key
 
 after_script:
   # Tricks to avoid unnecessary cache updates
@@ -18,7 +22,7 @@ after_script:
   - find `pwd`/.sbt -name "*.lock" -delete
 
 stages:
-  - test
+  #- test
   - publish
 
 test:
@@ -29,8 +33,6 @@ test:
 publish:
   stage: publish
   only:
-    - snapshot
+  #  - snapshot
   script:
-    - gpg --version
-    - ps aux | grep gpg
     - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";update;+publishSigned"
