--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,13 +22,13 @@ after_script:
   - find `pwd`/.sbt -name "*.lock" -delete
 
 stages:
-  #- test
+# - test
   - publish
 
-test:
-  stage: test
-  script:
-    - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";clean;test"
+#test:
+#  stage: test
+#  script:
+#    - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";clean;test"
 
 publish:
   stage: publish
