--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,12 @@ before_script:
   - export GNUPGHOME=`pwd`/.gnupg # https://serverfault.com/a/528355
   - gpg --version
   - ps aux | grep gpg
-  
+
   - export GPG_PATH=`pwd`/.gpg
   - mkdir $GPG_PATH
   - echo ${PGP_PUBRING} > $GPG_PATH/pubring.asc
   - echo ${PGP_SECRING} > $GPG_PATH/secring.asc
-  - gpg --import <(echo "$PGP_SECRING") # https://stackoverflow.com/a/43732926
+  - gpg --batch --import <(echo "$PGP_SECRING") # https://stackoverflow.com/a/43732926
   - gpg --list-key
 
 after_script:
