--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,18 +7,16 @@ cache:
   key: ${CI_PROJECT_NAME}
 
 before_script:
-  - apt-get install -y ca-certificates wget
   - export GPG_TTY=$(tty) # https://stackoverflow.com/a/55032706
   - export GNUPGHOME=`pwd`/.gnupg # https://serverfault.com/a/528355
-  - gpg --version
-  - ps aux | grep gpg
 
   - export GPG_PATH=`pwd`/.gpg
   - mkdir $GPG_PATH
   - echo ${PGP_PUBRING} > $GPG_PATH/pubring.asc
   - echo ${PGP_SECRING} > $GPG_PATH/secring.asc
-  - gpg --batch --import <(echo "$PGP_SECRING") # https://stackoverflow.com/a/43732926
+  - gpg --batch --import <(echo "$PGP_SECRING")
   - gpg --list-key
+  - sbt checkPgpSignatures
 
 after_script:
   # Tricks to avoid unnecessary cache updates
