Re-enable complete pipeline, GPG only for publishing, only publish snapshot from snapshot branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,26 +6,25 @@ cache:
     - .sbt/boot/
   key: ${CI_PROJECT_NAME}
 
-before_script:
-  - gpg --batch --import <(echo "$PGP_SECRING")
-
 after_script:
   # Tricks to avoid unnecessary cache updates
   - find `pwd`/.ivy2 -name "ivydata-*.properties" -delete
   - find `pwd`/.sbt -name "*.lock" -delete
 
 stages:
-# - test
+ - test
   - publish
 
-#test:
-#  stage: test
-#  script:
-#    - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";clean;test"
+test:
+  stage: test
+  script:
+    - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";clean;test"
 
 publish:
   stage: publish
-  #only:
-  #  - snapshot
+  only:
+    - snapshot
+  before_script:
+    - gpg --batch --import <(echo "$PGP_SECRING")
   script:
     - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";update;+publishSigned"
