--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ publish:
   stage: publish
   only:
     - snapshot
-  script:
+  before_script:
     - gpg --batch --import <(echo "$PGP_SECRING")
+  script:
     - sbt -Dsbt.ivy.home=`pwd`/.ivy2 -Dsbt.boot.directory=`pwd`/.sbt/boot ";update;+publishSigned"
